# inudb

./: Cargo.toml  example.parquet
.github/workflows/: clippy.yml  rust.yml
src/: dag.rs  lib.rs
src/catalog/: catalog.rs  dummy_catalog.rs  errors.rs  mod.rs
src/execution/: dummy_kernels.rs  errors.rs  generator_kernel.rs  kernel.rs  mod.rs  slots.rs
src/execution/kernels/: collect.rs  filter.rs  mod.rs  scan.rs  select.rs
src/execution/operators/: collect.rs  filter.rs  mod.rs  pipe.rs  scan.rs  select.rs
src/logical_plan/: dag.rs  dag_builder.rs  expr.rs  logical_plan.rs  mod.rs  node.rs
src/optimizer/: errors.rs  mod.rs  optimizer.rs
src/parser/: sql_parser.rs
